--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,13 @@ body *{
 
 h1 {
   font-weight: 900;
+  text-align: center;
+  border: 0.5px solid black;
+  background-color: rgba(158,202, 202, 0.4);
 }
 
 body {
-  background-color: lightgray;
+  background-color: rgba(127, 205, 187, 0.4);
 }
 
 .page {
@@ -20,20 +23,28 @@ body {
 
 .vis-container {
   width: 100%;
-  border: 1px solid black;
+  border: 0.5px solid black;
 }
 
+.vis-container2 {
+  width: 100%;
+  height: 85%;
+  border: 0.5px solid black;
+}
 .description h2,
 h1 {
   margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .description-right {
   padding-left: 20px;
+  text-align: justify;
 }
 
 .description-left {
   padding-right: 20px;
+  text-align: justify;
 }
 
 .pure-g {
@@ -42,4 +53,19 @@ h1 {
 
 .small-font {
   font-size: 14px;
+  text-align: center;
+  border: 0.5px solid black;
+  background-color: rgba(158,202, 202, 0.4);
 }
+
+
+.centered {
+  max-width: 55ch;
+  text-align: center;
+  margin: auto;
+  width: 120%;
+  height: 100%;
+  text-align: justify;
+}
+
+
