--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,7 @@ body *{
 h1 {
   font-weight: 900;
   text-align: center;
-  border: 0.5px solid black;
-  background-color: rgba(158,202, 202, 0.3);
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 body {
@@ -17,11 +16,9 @@ body {
 }
 
 .page {
-  width: 850px;
+  width: 900px;
   background-color: white;
   margin: auto;
-  padding: 50px;
-  padding-top: 35px;
 }
 
 .vis-container {
@@ -57,10 +54,7 @@ h1 {
 .small-font {
   font-size: 14px;
   text-align: center;
-  border: 0.5px solid black;
-  background-color: rgba(158,202, 202, 0.3);
 }
-
 
 .centered {
   max-width: 55ch;
@@ -71,4 +65,18 @@ h1 {
   text-align: justify;
 }
 
+.pure-g {
+  background-color: white;
+  margin-left: 25px;
+  margin-right: 25px;
+}
 
+.pure-g1 {
+  background-color: rgba(158,202, 202, 0.3);
+  padding: 25px;
+}
+
+.pure-g2 {
+  background-color: rgba(158,202, 202, 0.3);
+  padding: 2px;
+}
